@@ -1,3 +1,8 @@
+2008-10-22   D. V. Wiebe <getdata@ketiltrout.net>  svn:197
+	* src/putdata.c (_GD_DoRawOut): Figure out the encoding scheme before
+	attempting to check whether idem needs byte-swapping.  Bug report from
+	Matthew Truch.
+
 2008-10-21   D. V. Wiebe <getdata@ketiltrout.net>  svn:185
 	* src/include.c: Remove duplicate accessmode check.
 
